--- a/src/SFA.DAS.ApprenticeFeedback.Application.UnitTests/SFA.DAS.ApprenticeFeedback.Application.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Application.UnitTests/SFA.DAS.ApprenticeFeedback.Application.UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
