--- a/src/Tests/SFA.DAS.ApprenticeFeedback.Api.UnitTests/SFA.DAS.ApprenticeFeedback.Api.UnitTests.csproj
+++ b/src/Tests/SFA.DAS.ApprenticeFeedback.Api.UnitTests/SFA.DAS.ApprenticeFeedback.Api.UnitTests.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -18,7 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SFA.DAS.ApprenticeFeedback.Api\SFA.DAS.ApprenticeFeedback.Api.csproj" />
-    <ProjectReference Include="..\..\SFA.DAS.ApprenticeFeedback.Application.UnitTests\SFA.DAS.ApprenticeFeedback.Application.UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
